applets/clipboard: close config window if actioncollection gets deleted

When the clipbopard applet gets removed, the actioncollection that was
used to create the config dialog gets deleted and the state of the
dialog is not valid anymore, as there is nothing to configure anymore

pressing ok will access the action collection and crash

Close the dialog immediately when the applet and the action collection
is deleted

BUG:497927


(cherry picked from commit e8c1aa06abf81ed8d15aec37c0ab122b8d4915a3)

e8c1aa06 applets/clipboard: close config window if actioncollection gets deleted

Co-authored-by: Marco Martin <notmart@gmail.com>